# runas-rs

./: Cargo.toml  README.md  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: main.rs
src/: acl.rs  environment.rs  handle.rs  injection.rs  lib.rs  memory.rs  monitor.rs  output.rs  pipe.rs  runas.rs  sandbox.rs  sid.rs  token.rs
