[package]
name = "runas-rs"
version = "0.1.0"
edition = "2021"
description = "A runas implementation with extra features written in Rust"
license = "GPL-3.0"
repository = "https://github.com/joaoviictorti/runas-rs"
homepage = "https://github.com/joaoviictorti/runas-rs"
readme = "README.md"
keywords = ["runas", "windows", "rust", "redteam"]
categories = ["os", "security"]
exclude = [
    ".gitignore",
    "cli/",
    "target/",
]

[dependencies]
anyhow = { version = "1.0.97", default-features = false }

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Security_Authentication_Identity", 
    "Win32_Storage_FileSystem", 
    "Win32_System_Environment", 
    "Win32_System_IO", 
    "Win32_System_Pipes", 
    "Win32_System_StationsAndDesktops", 
    "Win32_System_Threading", 
    "Win32_System_WindowsProgramming", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_Security_Authorization",
    "Win32_Security_Authorization_UI",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Foundation"
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]
